--- a/client/app.html
+++ b/client/app.html
@@ -11,7 +11,7 @@
 		<h1 class="a">House Price Predictor</h1>
 <form class="form">
 	<h2 class="a">Area (Square Feet)</h2>
-    <input class="area"  type="text" id="uiSqft" class="floatLabel" name="Squareft" placeholder="Enter the location">
+    <input class="area"  type="text" id="uiSqft" class="floatLabel" name="Squareft" placeholder="Enter here">
 	<h2 class="a">Bhk</h2>
 	<div class="switch-field">
 		<input type="radio" id="radio-bhk-1" name="uiBHK" value="1"/>
